--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,12 @@ a {
   border-color: #c8d829 !important; 
   color:#0f1318 !important;
 }
+.css-1tjcs23 {
+  background-color: #c8d829 !important;
+  border-color: #c8d829 !important; 
+  color:#0f1318 !important;
+  margin-bottom: 100px;
+}
 
 .css-1kx4rqi {
   background-color: #c8d829 !important;
